# aocsuite

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
aocli/: aoc_client.py  aoc_directory.py  main.py
aocli/languages/: __init__.py  factory.py  python.py  rust.py
aocli/languages/templates/python/: main.py
aocli/languages/templates/rust/: Cargo.toml  exercise.rs  main.rs
aocli/utils/: http.py  messages.py  parsing.py
aocsuite/: aoc_client.py  aoc_directory.py  main.py
aocsuite-cli/: Cargo.toml
aocsuite-cli/src/: app.rs  commands.rs  git.rs  lib.rs  main.rs
aocsuite-client/: Cargo.toml
aocsuite-client/src/: lib.rs  parsing.rs  requests.rs
aocsuite-config/: Cargo.toml
aocsuite-config/src/: lib.rs
aocsuite-editor/: Cargo.toml
aocsuite-editor/src/: arg_builder.rs  editor.rs  editor_command.rs  editor_types.rs  lib.rs
aocsuite-fs/: Cargo.toml
aocsuite-fs/src/: dir.rs  file.rs  lib.rs
aocsuite-lang/: Cargo.toml
aocsuite-lang/src/: languages.rs  lib.rs  traits.rs  utils.rs
aocsuite-lang/src/python/: dependencies.rs  libber.rs  mod.rs  solver.rs  user_library.rs
aocsuite-lang/src/rust/: dependencies.rs  libber.rs  mod.rs  solver.rs  user_library.rs
aocsuite-parser/: Cargo.toml
aocsuite-parser/src/: http_ansicalendar.rs  http_markdown.rs  http_submission.rs  lib.rs
aocsuite-utils/: Cargo.toml
aocsuite-utils/src/: lib.rs
aocsuite/__assets__/rust/: lib.rs
aocsuite/languages/: __init__.py  factory.py  python.py  rust.py
aocsuite/languages/templates/python/: exercise.py
aocsuite/languages/templates/rust/: Cargo.toml  exercise.rs
aocsuite/utils/: enums.py  filenames.py  http.py  parsing.py  session.py
aoctils/: aoc_client.py  aoc_directory.py  main.py
aoctils/languages/: __init__.py  factory.py  python.py  rust.py
aoctils/languages/templates/python/: utils.py
aoctils/languages/templates/rust/: Cargo.toml  exercise.rs  lib.rs
aoctils/utils/: enums.py  http.py  messages.py  parsing.py
pyaoc/: __main__.py  aoc_client.py  aoc_directory.py  main.py
pyaoc/commands/: calendar.py  fetch.py  run.py  submit.py
pyaoc/commands/executor/: __init__.py  factory.py
pyaoc/commands/executor/languages/: python_executor.py
pyaoc/languages/: __init__.py  factory.py  python.py
pyaoc/languages/templates/python/: main.py
pyaoc/languages/templates/python/templates/: exercise.py  main.py
pyaoc/templates/: __init__.py  factory.py  initialize.py
pyaoc/templates/languages/: __init__.py  python_template.py
pyaoc/utils/: enums.py  filenames.py  http.py  io.py  messages.py  parsing.py  session.py  url.py
pyaoc/utils/languages/: __init__.py  factory.py  language_factory.py
pyaoc/utils/languages/python/: __init__.py  executor.py  exercise.py  python.py  utils.py
pyaoc/utils/languages/python/templates/: exercise.py  utils.py
src/: app.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  requests.rs  scaffold.rs
src/language/: mod.rs
src/language/rust/: mod.rs
src/utils/: mod.rs
