[workspace]
resolver = "3"
members = [
"aocsuite-cli",
"aocsuite-client", "aocsuite-config",
"aocsuite-editor"
, "aocsuite-fs", "aocsuite-lang", "aocsuite-utils"]

[workspace.dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml_edit = "0.22.27"
