[workspace]
resolver = "2"
members = [
"aocsuite-cli", "aocsuite-client",
"aocsuite-config",
"aocsuite-editor"
, "aocsuite-fs", "aocsuite-lang", "aocsuite-parser", "aocsuite-utils"]

[workspace.dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml_edit = "0.22.27"
colored = "3.0.0"
html2md = "0.2.15"
regex = "1.11.1"
scraper = "0.23.1"
