[project]
name = 'aocsuite'
description = 'Python implemented suite for doing Advent of Code exercises'
version = "0.1.1"
authors = [
	{ name = 'Christian Johansen', email = "christian.holm.johansen@gmail.com" }
]
dependencies = [
  "toml",
  "beautifulsoup4"
  ]

[project.scripts]
aocsuite = "aocsuite.main:main"
