[project]
name = 'aocsuite'
description = 'Python implemented suite for doing Advent of Code exercises'
version = "0.1.1"
authors = [
	{ name = 'Christian Johansen', email = "christian.holm.johansen@gmail.com" }
]
dependencies = [
  "toml",
  "beautifulsoup4",
  "markdownify"
  ]

[project.scripts]
aocsuite = "aocsuite.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"aocsuite" = ["__assets__/**/*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
