[package]
name = "aocsuite-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aocsuite-client = { version = "0.1.0", path = "../aocsuite-client" }
aocsuite-config = { version = "0.1.0", path = "../aocsuite-config" }
aocsuite-lang = { version = "0.1.0", path = "../aocsuite-lang" }
aocsuite-utils = { version = "0.1.0", path = "../aocsuite-utils" }
clap = { workspace = true, features = ["derive"] }
thiserror.workspace = true
