[package]
name = "aocsuite-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
aocsuite-client = { version = "0.2.0", path = "../aocsuite-client" }
aocsuite-config = { version = "0.2.0", path = "../aocsuite-config" }
aocsuite-editor = { version = "0.2.0", path = "../aocsuite-editor" }
aocsuite-fs = { version = "0.2.0", path = "../aocsuite-fs" }
aocsuite-lang = { version = "0.2.0", path = "../aocsuite-lang" }
aocsuite-utils = { version = "0.2.0", path = "../aocsuite-utils" }
clap = { workspace = true, features = ["derive"] }
thiserror.workspace = true
