[package]
name = "aocsuite-lang"
version = "0.2.0"
edition = "2021"

[dependencies]
aocsuite-fs = { version = "0.2.0", path = "../aocsuite-fs" }
aocsuite-utils = { version = "0.2.0", path = "../aocsuite-utils" }
clap = { workspace=true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
